[package]
name        = "clappers"
version     = "2.0.2"
description = "Command Line Argument Parsing Particularly Easy, Relatively Straightforward!"
authors     = ["Alfie John <alfie@alfie.wtf>"]

documentation = "https://docs.rs/clappers/"
homepage      = "https://crates.io/crates/clappers"
repository    = "https://github.com/alfiedotwtf/clappers"
readme        = "README.md"
license       = "GPL-2.0-only"
edition       = "2018"
